# talkingplants

./: .buildpacks  .gitignore  Procfile  README.md  netlify.toml
api/: .env.example  Cargo.toml  Procfile  db.go  go.mod  go.sum  main.go  models.go  plants.go
api/src/: common.rs  main.rs  plants.rs  sensordata.rs
app/: .gitignore  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/app/: Application.kt  FirebaseCloudMessagingPluginRegistrant.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
arduino/: .gitignore
arduino/arduino_mkr_1010/: arduino_mkr_1010.ino
arduino/arduino_mkr_1010_battery/: arduino_mkr_1010_battery.ino
arduino/arduino_mkr_1010_reset_test/: arduino_mkr_1010_reset_test.ino
arduino/keep_power_bank_alive/: keep_power_bank_alive.ino
arduino/sketch_jul28a/: sketch_jul28a.ino
misc/: notes-2020-08-28.md  specification.md
notifier/: .firebaserc  .gitignore  README.md
notifier/functions/: .env.example  .eslintrc.json  constants.js  index.js  package-lock.json  package.json  utils.js
sql/: tables.sql
web/: .env.production  package.json
web/public/: index.html
web/src/: App.css  App.js  index.css  index.js
web/src/components/: AreaChart.js  BrushChart.js  Home.css  Home.js  LineChart.js  PlantMenuEntry.js
web/src/components/Plant/: Data.js  index.js
web/src/components/RoundedImage/: index.css  index.js
