[package]
name = "api"
version = "0.1.0"
authors = ["Petter Daae <petter.daae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
log = "0.4.11"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
http = "0.2.1"
tokio-postgres = { version = "0.5.5", features = [ ] }
postgres-openssl = "0.3.0"
# openssl = "0.10.30"
postgres-native-tls = "0.3.0"
openssl = "0.10"